# 3DBinPacking

./: .gitignore  CMakeLists.txt  visudat_parser.cpp
boxologic/: boxologic  visudat
doc/: boxlist.txt.out
include/: AScene.hpp  AShape.hpp  Box.hpp  Graphics.hpp  Gui.hpp  GuiQuad.hpp  IWindow.hpp  Representation.hpp  SceneManager.hpp  SfmlQuad.hpp  Text.hpp  Things.hpp  visudat_parser.hpp
src/: AShape.cpp  Box.cpp  Graphics.cpp  Graphics.cpp.cpp  Graphics.hpp  Gui.cpp  Representation.cpp  SceneManager.cpp  SfmlQuad.cpp  Text.cpp  Things.cpp  binpack.c  binpack.h  main.cpp  visual.c  visual.h  visudat_parser.cpp  visudat_parser.hpp
